bit of work on demo proposal, examples

--- a/talks/2015-FARM/abstract.bib
+++ b/talks/2015-FARM/abstract.bib
@@ -1,9 +1,7 @@
-@misc{matlage2011every,
-  title={Every Animation Should Have a Beginning, a Middle, and an End},
-  author={Matlage, Kevin and Gill, Andy},
-  booktitle={Trends in Functional Programming},
-  pages={150--165},
-  year={2011},
-  publisher={Springer}
+@Misc{haskell,
+  author =      "Simon Marlow",
+  editor =      "Simon Marlow",
+  title =       "Haskell 2010 {Language} {Report}",
+  year =        "2010",
+  howpublished = {\url{https://www.haskell.org/onlinereport/haskell2010/}}
 }
-
