some citations and final tweaks/edits

--- a/talks/2015-FARM/abstract.bib
+++ b/talks/2015-FARM/abstract.bib
@@ -5,3 +5,29 @@
   year =        "2010",
   howpublished = {\url{https://www.haskell.org/onlinereport/haskell2010/}}
 }
+
+@Techreport{burrows1994block,
+  title={A block-sorting lossless data compression algorithm},
+  number={124},
+  author={Burrows, Michael and Wheeler, David J},
+  year={1994},
+  institution={Digital Equipment Corporation}
+}
+
+@article{hilbert1891ueber,
+  title={Ueber die stetige Abbildung einer Line auf ein Fl{\"a}chenst{\"u}ck},
+  author={Hilbert, David},
+  journal={Mathematische Annalen},
+  volume={38},
+  number={3},
+  pages={459--460},
+  year={1891},
+  publisher={Springer}
+}
+
+@inproceedings{piponipolynomial,
+  title={Polynomial Functors Constrained by Regular Expressions},
+  author={Piponi, Dan and Yorgey, Brent A},
+  booktitle={Proceedings of the Mathematics of Program Construction},
+  year={2015}
+}
