add a couple more citations

--- a/talks/2015-FARM/abstract.bib
+++ b/talks/2015-FARM/abstract.bib
@@ -31,3 +31,25 @@
   booktitle={Proceedings of the Mathematics of Program Construction},
   year={2015}
 }
+
+@inproceedings{yorgey2012monoids,
+  title={Monoids: theme and variations (functional pearl)},
+  author={Yorgey, Brent A},
+  booktitle={ACM SIGPLAN Notices},
+  volume={47},
+  number={12},
+  pages={105--116},
+  year={2012},
+  organization={ACM}
+}
+
+@article{hudak1996building,
+  title={Building domain-specific embedded languages},
+  author={Hudak, Paul},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={28},
+  number={4es},
+  pages={196},
+  year={1996},
+  publisher={ACM}
+}
