--- a/talks/2015-FARM/abstract.bib
+++ b/talks/2015-FARM/abstract.bib
@@ -15,7 +15,7 @@
 }
 
 @article{hilbert1891ueber,
-  title={Ueber die stetige Abbildung einer Line auf ein Fl{\"a}chenst{\"u}ck},
+  title={{{\"U}ber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck}},
   author={Hilbert, David},
   journal={Mathematische Annalen},
   volume={38},
