replace HCAR entry with updated file

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,8 +1,10 @@
 % diagrams-Bd.tex
 \begin{hcarentry}[updated]{diagrams}
-\report{Brent Yorgey}
+\report{Brent Yorgey}%05/15
 \status{active development}
-
+\participants{Daniel Bergey, Jan Bracker, Christopher Chalmers, Daniil Frumin,
+  Allan Gardner, Andrew Gill, 
+  Niklas Haas, John Lato, Chris Mears, Jeff Rosenbluth, Michael Sloan, Ryan Yates, Brent Yorgey}
 \makeheader
 
 The diagrams framework provides an embedded domain-specific language
@@ -28,7 +30,7 @@ annotations, named subdiagrams, and more.
 
 Since the last HCAR edition, diagrams 1.3 was released in April.
 New features include:
-\begin{itemize}
+\begin{compactitem}
 \item Computing intersection points between paths
 \item Support for generalized affine maps between different vector
   spaces, including projections
@@ -40,7 +42,8 @@ New features include:
   suitable numeric type, rather than having \texttt{Double} baked in
 \item A refactoring to use the \texttt{linear} package instead of
   \texttt{vector-space}
-\end{itemize}
+\end{compactitem}
+
 
 %**<img width=350 src="./kaleidoscope.jpg">
 %*ignore
@@ -80,7 +83,7 @@ hang out in the \texttt{\#diagrams} IRC channel on freenode.
 \begin{compactitem}
 \item \url{http://projects.haskell.org/diagrams}
 \item \url{http://projects.haskell.org/diagrams/gallery.html}
-\item \url{http://wiki.haskell.org/Diagrams}
+\item \url{http://haskell.org/haskellwiki/Diagrams}
 \item \url{http://github.com/diagrams}
 \item \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}
 \item \url{http://www.youtube.com/watch?v=X-8NCkD2vOw}
