--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -2,9 +2,7 @@
 \begin{hcarentry}[updated]{diagrams}
 \report{Brent Yorgey}%05/15
 \status{active development}
-\participants{Daniel Bergey, Jan Bracker, Christopher Chalmers, Daniil Frumin,
-  Allan Gardner, Andrew Gill, 
-  Niklas Haas, John Lato, Chris Mears, Jeff Rosenbluth, Michael Sloan, Ryan Yates, Brent Yorgey}
+\participants{many}
 \makeheader
 
 The diagrams framework provides an embedded domain-specific language
@@ -28,22 +26,26 @@ annotations, named subdiagrams, and more.
 
 \subsubsection*{What's new}
 
-Since the last HCAR edition, diagrams 1.3 was released in April.
-New features include:
+There has not yet been a new major release of diagrams since version
+1.3 in April, but work has continued apace. Here is a sampling of new
+features already in diagrams HEAD or currently being worked on:
 \begin{compactitem}
-\item Computing intersection points between paths
-\item Support for generalized affine maps between different vector
-  spaces, including projections
-\item New backends: \texttt{diagrams-html5} generates Javascript to draw on an
-  HTML canvas; \texttt{diagrams-pgf} generates PGF code suitable for
-  inclusion in a \TeX document
-\item Better interface for recompilation looping via the command line
-\item Generalized numerics: diagrams are now parameterized by a
-  suitable numeric type, rather than having \texttt{Double} baked in
-\item A refactoring to use the \texttt{linear} package instead of
-  \texttt{vector-space}
+\item B-spline support, and B-spline to cubic Bezier conversion
+\item CSG support for 3D diagrams
+\item New techniques and tools for drawing 2D projections of 3D diagrams
+\item Constraint-based layout
+\item Separate fill and stroke opacity attributes
+\item New aligned composition operator
 \end{compactitem}
 
+\texttt{diagrams-pandoc}, a pandoc filter which can automatically
+compile diagrams code included inline in pandoc documents, had its
+first release to Hackage.
+
+We are also working on using \texttt{stack} to create a system for
+easier, more reproducible builds, which will benefit both users and
+developers, and form the basis for much more comprehensive continuous
+integration testing.
 
 %**<img width=350 src="./kaleidoscope.jpg">
 %*ignore
@@ -51,12 +53,6 @@ New features include:
 \includegraphics[width=0.45\textwidth]{html/kaleidoscope.jpg}
 \end{center}
 %*endignore
-
-\subsubsection*{GSoC}
-
-This coming summer, Ajay Ramanathan will work under the guidance of
-Chris Chalmers to develop a library/API for working with a layered
-``Grammar of Graphics'', using \texttt{diagrams} as a foundation.
 
 \subsubsection*{Contributing}
 
@@ -85,7 +81,7 @@ hang out in the \texttt{\#diagrams} IRC channel on freenode.
 \item \url{http://projects.haskell.org/diagrams/gallery.html}
 \item \url{http://haskell.org/haskellwiki/Diagrams}
 \item \url{http://github.com/diagrams}
-\item \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}
+\item \url{http://ozark.hendrix.edu/~yorgey/pub/monoid-pearl.pdf}
 \item \url{http://www.youtube.com/watch?v=X-8NCkD2vOw}
 \end{compactitem}
 \end{hcarentry}
