--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,6 +1,6 @@
 % diagrams-Bd.tex
 \begin{hcarentry}[updated]{diagrams}
-\report{Brent Yorgey}%05/15
+\report{Brent Yorgey}%11/15
 \status{active development}
 \participants{many}
 \makeheader
@@ -26,9 +26,10 @@ monoidal annotations, named subdiagrams, and more.
 
 \subsubsection*{What's new}
 
-There has not yet been a new major release of diagrams since version
-1.3 in April, but work has continued apace. Here is a sampling of new
-features already in diagrams HEAD or currently being worked on:
+Diagrams development has currently stalled a bit, as most of the major
+contributors are busy with other things.  However, this summer should
+bring a 1.4 release with some new features:
+
 \begin{compactitem}
 \item B-spline support, and B-spline to cubic Bezier conversion
 \item Path union and intersection
@@ -38,14 +39,10 @@ features already in diagrams HEAD or currently being worked on:
 \item Constraint-based layout
 \end{compactitem}
 
-\texttt{diagrams-pandoc}, a pandoc filter which can automatically
-compile diagrams code included inline in pandoc documents, had its
-first release to Hackage.
-
-We are also working on using \texttt{stack} to create a system for
-easier, more reproducible builds, which will benefit both users and
-developers, and form the basis for much more comprehensive continuous
-integration testing.
+We are also continuing work on using \texttt{stack} to create a system
+for easier, more reproducible builds, which will benefit both users
+and developers, and form the basis for much more comprehensive
+continuous integration testing.
 
 %**<img width=350 src="./kaleidoscope.jpg">
 %*ignore
