--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -1,28 +1,31 @@
 * Checklist for major releases [0/8]
 ** TODO go through per-package checklist
-*** TODO monoid-extras
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
-*** TODO dual-tree
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+*** DONE monoid-extras
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump
+  + [X] LICENSE updated
+*** DONE dual-tree
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump
+  + [X] LICENSE updated
 *** TODO diagrams-core
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -32,6 +35,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -41,6 +45,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -50,6 +55,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -59,6 +65,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -68,6 +75,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -77,6 +85,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -86,6 +95,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -95,6 +105,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -104,6 +115,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -113,6 +125,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -122,6 +135,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -131,6 +145,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -140,6 +155,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -149,6 +165,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -158,6 +175,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -167,6 +185,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -176,6 +195,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -185,6 +205,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -194,6 +215,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -203,6 +225,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -212,6 +235,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -221,6 +245,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -231,6 +256,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -240,6 +266,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -249,6 +276,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -258,6 +286,7 @@
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
+  + [ ] travis build green
   + [ ] update tested-with field
   + [ ] Haddocks up to date
   + [ ] version bump
@@ -279,14 +308,17 @@
 ** TODO diagrams-haddock [0/2]
 + [ ] make sure all diagrams-haddock examples build
 + [ ] rebuild all diagrams-haddock examples and check them in
-** TODO upload packages [0/3]
+** TODO upload packages [0/4]
 + [ ] List release date in each CHANGES file
 + [ ] Apply a tag to each repo just before releasing
-        - The tag should have a name like "vX.X.X", with a v prefixed
-          to the version
-        - The tag message should mention the version and give a very
-          short comment describing the release
-        - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
+  - The tag should have a name like "vX.X.X", with a v prefixed
+    to the version
+  - The tag message should mention the version and give a very
+    short comment describing the release
+  - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
++ [ ] If necessary, rename old 'release' branch to 'release-X.Y' and
+  change 'release' branch to point to appropriate commit (requires a
+  force-push)
 + [ ] Upload
 ** TODO regenerate combined Haddock documentation and commit to website.
       NOTE: this must be done AFTER releasing packages to Hackage!
