--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -8,8 +8,10 @@
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [X] version bump
+  + [X] version bump  -- none needed
   + [X] LICENSE updated
+
+    No upload needed.
 *** DONE dual-tree
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
@@ -18,8 +20,10 @@
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [X] version bump
+  + [X] version bump -- none needed
   + [X] LICENSE updated
+
+    No upload needed.
 *** DONE diagrams-core
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
@@ -30,36 +34,41 @@
   + [X] Haddocks up to date
   + [ ] version bump
   + [X] LICENSE updated
-*** TODO active
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
-*** TODO diagrams-solve
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+*** DONE active
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump  -- none needed
+  + [X] LICENSE updated
+
+    No upload needed.
+*** DONE diagrams-solve
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump -- none needed
+  + [X] LICENSE updated
+
+  No upload needed.
 *** TODO diagrams-lib
-  + [ ] CHANGES updated
+  + [X] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
   + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
   + [ ] version bump
-  + [ ] LICENSE updated
+  + [X] LICENSE updated
+
 *** TODO SVGFonts
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
